test/integration/bad/closures/forwarddecl.stan
model {
    function
    real foo(real x, real y);
    function
    real foo(real x, real y) {
        return sqrt(squar(x)+square(y));
    }
}